fix - few spacings fixed

--- a/src/components/AppFooter/AppFooter.scss
+++ b/src/components/AppFooter/AppFooter.scss
@@ -1,4 +1,8 @@
 .AppFooter {
     justify-content: center;
     color: white;
+
+    span {
+        margin-left: 15px;
+    }
 }
