--- a/src/components/LaunchesPage/LaunchesPage.scss
+++ b/src/components/LaunchesPage/LaunchesPage.scss
@@ -1,1 +1,6 @@
-.LaunchesPage {}
+.LaunchesPage {
+    h1 {
+        margin-top: 15px;
+        font-size: 1.4em;
+    }
+}
